---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/for/statement_initializer.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: invalid `for` loop initialiser: block statement
   ╭─[craftinginterpreters/test/for/statement_initializer.lox:3:1]
   │
 3 │ for ({}; a < 2; a = a + 1) {}
   │ ───  ─┬  
   │       ╰── only expression statements and variable declarations are allowed here
───╯
